# CG

./: .gitignore  CMakeLists.txt
assets/shaders/: cube.fs  cube.vs  sphere.fs  sphere.vs
src/: GLCube.cpp  GLCube.h  GLObject.h  main.cpp  movingcamera.cpp  movingcamera.h
src/globjects/: GLCube.cpp  GLCube.h  GLObject.h  GLSkybox.cpp  GLSkybox.h  GLSphere.cpp  GLSphere.h
src/managers/: buffermanager.cpp  buffermanager.h  shader.cpp  shader.h  shadermanager.cpp  shadermanager.h  texture.cpp  texture.h  texturemanager.cpp  texturemanager.h
